fixed playbook issues, copy of bootstrap script

--- a/install_mc_docker.yml
+++ b/install_mc_docker.yml
@@ -67,10 +67,11 @@
         ports:
           - "25565:25565"
         volumes:
-          - "{{ ansible_facts['ansible_user_dir'] }}/docker_mc_server:/data"
+          - "/home/docker/docker_mc_server:/data"
         env:
           TYPE: PAPER
           EULA: "TRUE"
+          MEMORY: "8G"
 
     - name: UFW allow portainer, ssh, minecraft.
       community.general.ufw:
